product_docs/docs/edb-postgres-ai/1.3/hybrid-manager/using_hybrid_manager/monitoring/monitoring_console/metrics_latency.mdx
---
title: Metrics latency
navTitle: Metrics latency
description: Understand monitoring latency for database metrics with the Hybrid Manager console.
---

Hybrid Manager (HM) collects and displays a wide range of observability data to give you comprehensive visibility into your database clusters. 

The refresh intervals for these metrics vary depending on the metric and database type. This difference is due to the varying methods of data collection and integration.

## Understanding data latency

When you view your database metrics in the Hybrid Manager (HM) console, the data you see is the result of a two-step process, each with its own refresh interval. Understanding both steps will help you understand how up-to-date your metrics are.

**Backend refresh:** This is the first step, where the Hybrid Manager's internal services actively collect updated metrics and data from your database clusters. Whether your cluster is HM-managed or an external database, the backend systems are constantly gathering the latest information. This data is then stored in the Hybrid Manager's central data stores.

**HM console refresh:** This is the second step, where the HM console makes calls to your central data stores to retrieve the most recently collected data and display it to you.

The actual latency of the data you see in the HM console is a combination of these two refresh intervals. The data on the screen will reflect information that is not older than the sum of these two intervals. In many cases, it will be much fresher, sometimes just seconds old.

## Refresh intervals

**Backend refresh:** The Hybrid Manager's internal services update the data stores as follows. The interval varies depending on the database cluster type and the metrics context.

|                                            | HM-managed | External: <br/> self-managed | External: <br/> CSP-managed | External: <br/> EDB CNPG |
| ------------------------------------------ | ---------- | ---------------------------- | --------------------------- | ------------------------ |
| Estate page ► <br/> Postgres table         | 20s        | 5m                           | 5m                          | 5m                       |
| Cluster view ► <br/> Monitoring tab        | 15s        | 15s                          | 30s                         | 15s                      |
| Cluster view ► <br/> Query Diagnostics tab | 1m         | 1m                           | na                          | 1m                       |
| Cluster view ► <br/> Recommendations tab   | 30m        | 30m                          | na                          | 30m                      |
| Cluster view ► <br/> Logs tab              | &lt;1s     | &lt;1s                       | na                          | &lt;1s                   |

These intervals are configurable for self-managed and CSP-managed clusters. To customize the frequency of data collection for self-managed clusters, define the intervals in the [PG AI Agent configuration YAML](../mon_ext_dbs/mon_with_agent/configure_agent.mdx#prepare-a-configuration-file). In the case of CSP-managed clusters, define the intervals for the supported metrics through the [`beacon-csp-credentials` configuration](../mon_ext_dbs/mon_ext_csp/rds.mdx).

**HM console refresh:** The HM console updates the data for all cluster types with the following frequency:

|                                            | Console refresh interval    |
| ------------------------------------------ | --------------------------- |
| Estate page ► <br/> Postgres table         | 1m                          |
| Cluster view ► <br/> Monitoring tab        | 30s                         |
| Cluster view ► <br/> Query Diagnostics tab | manual browser refresh (\*) |
| Cluster view ► <br/> Recommendations tab   | manual browser refresh (\*) |
| Cluster view ► <br/> Logs tab              | 10s                         |

!!!note

    (\*) Data is updated only when you explicitly reload the browser page.
