product_docs/docs/edb-postgres-ai/1.4/hybrid-manager/using_hybrid_manager/monitoring/monitoring_console/metrics_latency.mdx
---
title: Metrics latency
navTitle: Metrics latency
description: Understand monitoring latency for database metrics with the Hybrid Manager console.
---

Hybrid Manager (HM) collects and displays a wide range of observability data to give you comprehensive visibility into your database clusters.

The refresh intervals for these metrics vary depending on the metric and database type. This difference is due to the varying methods of data collection and integration.

## Understanding data latency

When you view your database metrics in the HM console, the data you see is the result of a two-step process, each with its own refresh interval. Understanding both steps will help you understand how up to date your metrics are.

**Backend refresh:** This is the first step, where HM's internal services actively collect updated metrics and data from your database clusters. Whether your cluster is managed by HM or an external database, the backend systems are constantly gathering the latest information. This data is then stored in HM's central data stores.

**HM console refresh:** This is the second step, where the HM console makes calls to your central data stores to retrieve the most recently collected data and display it to you.

The actual latency of the data you see in the HM console is a combination of these two refresh intervals. The data on the screen reflects information that isn't older than the sum of these two intervals. In many cases, it's much fresher, sometimes just seconds old.

## Refresh intervals

**Backend refresh:** HM's internal services update the data stores as follows. The interval varies depending on the database cluster type and the metrics context.

|                                            | HM-managed | External: <br/> self-managed | External: <br/> CSP-managed | External: <br/> EDB CNPG |
| ------------------------------------------ | ---------- | ---------------------------- | --------------------------- | ------------------------ |
| Estate page ► <br/> Postgres table         | 15s        | 15s                          | 15s                         | 15s                      |
| Cluster view ► <br/> Monitoring tab        | 15s        | 15s                          | 15s                         | 15s                      |
| Cluster view ► <br/> Query Diagnostics tab | 5m         | 5m                           | na                          | 5m                       |
| Cluster view ► <br/> Recommendations tab   | 10m        | 10m                          | na                          | 10m                      |
| Cluster view ► <br/> Logs tab              | &lt;1s     | &lt;1s                       | na                          | &lt;1s                   |

The Monitoring and Query Diagnostics tabs use separate data pipelines, which produces different update frequencies. Query Diagnostics relies on the agent to collect statistics and send them in ingestion batches to HM's central data store. The Monitoring tab sources data from a Thanos time-series store &mdash; for HM-managed clusters, metrics are scraped directly, while for external or self-managed CNPG clusters, the agent is responsible for metric collection.

The scraping intervals (distinct from the refresh intervals above) for self-managed clusters can be configured under `provider.onprem.clusters.nodes.metrics.stats` in the [EDB Postgres AI agent configuration YAML](../mon_ext_dbs/mon_with_agent/configure_agent.mdx#prepare-a-configuration-file). The default values are recommended for most cases — you typically only need to enable this section without overriding the defaults. For CSP-managed clusters, backend refresh intervals aren't customer-configurable at this release.

**HM console refresh:** The HM console updates the data for all cluster types with the following frequency.

|                                            | Console refresh interval    |
| ------------------------------------------ | --------------------------- |
| Estate page ► <br/> Postgres table         | 1m                          |
| Cluster view ► <br/> Monitoring tab        | 30s                         |
| Cluster view ► <br/> Query Diagnostics tab | Manual browser refresh (\*) |
| Cluster view ► <br/> Recommendations tab   | Manual browser refresh (\*) |
| Cluster view ► <br/> Logs tab              | 10s                         |

!!!note

    (\*) Data is updated only when you explicitly reload the browser page.
